[overflowscrolling] Fix code for mobile only

--- a/src/overflowscrolling/sass/page/_page.scss
+++ b/src/overflowscrolling/sass/page/_page.scss
@@ -1,20 +1,53 @@
-.overflow_wrap {width:100%; height:100px; overflow:hidden;
-    .scrolling_wrap {width:100%; height:100%; font-size:0; white-space:nowrap;
-        //&:hover {cursor:move}
-        &::-webkit-scrollbar {
-            display: none;
+.overflow {
+    width:100%;
+    height:100px;
+    overflow-x:scroll;
+    white-space:nowrap;
+    scrollbar-width:none;
+    -ms-overflow-style:none;
+    &::-webkit-scrollbar {
+        display:none;
+    }
+    &--wrap {
+        width:100%;
+        height:100%;
+        font-size:0;
+    }
+    &__list {
+        width:100%;
+        height:100%;
+        display:inline-block;
+        text-align:center;
+        font-size:12px;
+        &--1 {
+            background-color:blanchedalmond;
         }
-        li {width:100%; height:100%; display:inline-block; text-align:center; font-size:12px;
-            &:nth-child(1) {background:blanchedalmond}
-            &:nth-child(2) {background:darkseagreen}
-            &:nth-child(3) {background:palevioletred}
-            &:nth-child(4) {background:aliceblue}
-            &:nth-child(5) {background:lightgoldenrodyellow}
-            &:nth-child(6) {background:ivory}
-            &:nth-child(7) {background:darkkhaki}
-            &:nth-child(8) {background:darkgoldenrod}
-            &:nth-child(9) {background:darkseagreen}
-            &:nth-child(10) {background:violet}
+        &--2 {
+            background-color:darkseagreen;
+        }
+        &--3 {
+            background-color:palevioletred;
+        }
+        &--4 {
+            background-color:aliceblue;
+        }
+        &--5 {
+            background-color:lightgoldenrodyellow;
+        }
+        &--6 {
+            background-color:ivory;
+        }
+        &--7 {
+            background-color:darkkhaki;
+        }
+        &--8 {
+            background-color:darkgoldenrod;
+        }
+        &--9 {
+            background-color:darkseagreen;
+        }
+        &--10 {
+            background-color:violet;
         }
     }
 }
